Added a total column

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             <td><input type="number" class="userEntry userNumber" id="number"></td>
             <td><button type="button">&#10005;</button></td>
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="5">
+                    Total
+                    <span class="total">$0.00</span>
+                </td>
+            </tr>
+        </tfoot>
     </table>
    </div>
 </body>
