addded ID of total to the <span>

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <tr>
                 <td colspan="5">
                     Total
-                    <span class="total">$0.00</span>
+                    <span class="total" id="total">$0.00</span>
                 </td>
             </tr>
         </tfoot>
