added new entry button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     Total
                     <span class="total" id="total">$0.00</span>
                 </td>
+                <td>
+                    <button type="button" id="newItem">New Item</button>
+                </td>
             </tr>
         </tfoot>
     </table>
