changed function name to budgetItem

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="total" id="total">$0.00</span>
                 </td>
                 <td>
-                    <button type="button" id="newItem" onclick="newUserItem()">New Item</button>
+                    <button type="button" id="newItem" onclick="budgetItem()">New Item</button>
                 </td>
             </tr>
         </tfoot>
