added id of userdata

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <th class="headerRow">Income/Expense</th>
             <th class="headerRow">Amount</th>
         </thead>
-        <tbody class="userData">
+        <tbody class="userData" id="userData">
             <td><input type="date" class="userEntry userDate" id="date"></td>
             <td><input type="text" placeholder="Bills" class="userEntry userDescription" id="description"></td>
             <td>
