--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </select>
             </td>
             <td><input type="number" class="userEntry userNumber" id="number"></td>
-            <td><button type="button">&#10005;</button></td>
+            <td><button type="button" onclick="deleteItem()">&#10005;</button></td>
         </tbody>
         <tfoot>
             <tr>
